--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -81,6 +81,7 @@
             <artifactId>JccWallet</artifactId>
             <version>1.0.0</version>
         </dependency>
+
     </dependencies>
     <licenses>
         <license>
@@ -213,7 +214,27 @@
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
-
+                    <!--生成doc jar包-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <!-- 解决控制台乱码 -->
+                            <aggregate>true</aggregate>
+                            <charset>UTF-8</charset>
+                            <encoding>UTF-8</encoding>
+                            <docencoding>UTF-8</docencoding>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
             <distributionManagement>
